Deprecate Error を修正